--- a/modules/backend/assets/less/layout/outerlayout.less
+++ b/modules/backend/assets/less/layout/outerlayout.less
@@ -123,10 +123,14 @@ html.csstransitions {
             width: auto;
             padding: @padding-standard * 2;
 
-            .horizontal-form input {
+            .horizontal-form {
                 display: block;
-                width: 100% !important;
-                margin-bottom: @padding-standard;
+
+                input {
+                    display: block;
+                    width: 100% !important;
+                    margin-bottom: @padding-standard;
+                }
             }
         }
     }
